용택 뷰페이지 추가

--- a/finalTest/src/main/resources/application.properties
+++ b/finalTest/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.data-username=c##team
-spring.datasource.data-password=team
+spring.datasource.data-username=c##na
+spring.datasource.data-password=na
 
 server.port=8088
 server.servlet.session.timeout=36000
