--- a/finalTest/pom.xml
+++ b/finalTest/pom.xml
@@ -68,6 +68,12 @@
          	<scope>provided</scope>
       	</dependency>
       
+      	<!-- 코드 수정 실시간 반영 -->
+         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+         </dependency>
+      
 	</dependencies>
 
 	<build>
