--- a/finalTest/pom.xml
+++ b/finalTest/pom.xml
@@ -18,57 +18,98 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+	
+ <dependencies>
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-web</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.mybatis.spring.boot</groupId>
+         <artifactId>mybatis-spring-boot-starter</artifactId>
+         <version>2.1.3</version>
+      </dependency>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.mybatis.spring.boot</groupId>
-			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>2.1.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ojdbc8</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		
-		<dependency>
-         	<groupId>javax.servlet</groupId>
-         	<artifactId>jstl</artifactId>
-      	</dependency>
-
-      	<dependency>
-        	<groupId>org.apache.tomcat.embed</groupId>
-         	<artifactId>tomcat-embed-jasper</artifactId>
-         	<scope>provided</scope>
-      	</dependency>
+      <dependency>
+         <groupId>com.oracle.database.jdbc</groupId>
+         <artifactId>ojdbc8</artifactId>
+         <scope>runtime</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.projectlombok</groupId>
+         <artifactId>lombok</artifactId>
+         <optional>true</optional>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-tomcat</artifactId>
+         <scope>provided</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-test</artifactId>
+         <scope>test</scope>
+         <exclusions>
+            <exclusion>
+               <groupId>org.junit.vintage</groupId>
+               <artifactId>junit-vintage-engine</artifactId>
+            </exclusion>
+         </exclusions>
+      </dependency>
       
-	</dependencies>
+      <dependency>
+         <groupId>javax.servlet</groupId>
+         <artifactId>jstl</artifactId>
+      </dependency>
+      
+      <dependency>
+         <groupId>org.apache.tomcat.embed</groupId>
+         <artifactId>tomcat-embed-jasper</artifactId>
+         <scope>provided</scope>
+      </dependency>
+      
+      <dependency>
+          <groupId>org.apache.axis</groupId>
+          <artifactId>axis</artifactId>
+          <version>1.4</version>
+      </dependency>
+      
+      <dependency>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+          <version>1.2</version>
+      </dependency>
+      
+      <!-- https://mvnrepository.com/artifact/commons-discovery/commons-discovery -->
+      <dependency>
+          <groupId>commons-discovery</groupId>
+          <artifactId>commons-discovery</artifactId>
+          <version>0.5</version>
+      </dependency>
+      
+      <!-- https://mvnrepository.com/artifact/javax.xml/jaxrpc -->
+      <dependency>
+          <groupId>javax.xml</groupId>
+          <artifactId>jaxrpc</artifactId>
+          <version>1.1</version>
+      </dependency>
+      
+      <!-- https://mvnrepository.com/artifact/javax.xml.soap/saaj-api -->
+      <dependency>
+          <groupId>javax.xml.soap</groupId>
+          <artifactId>saaj-api</artifactId>
+          <version>1.3.5</version>
+      </dependency>
+      
+      <!-- https://mvnrepository.com/artifact/wsdl4j/wsdl4j -->
+      <dependency>
+          <groupId>wsdl4j</groupId>
+          <artifactId>wsdl4j</artifactId>
+          <version>1.6.3</version>
+      </dependency>
+      
+      
+   </dependencies>
 
 	<build>
 		<plugins>
