--- a/finalTest/pom.xml
+++ b/finalTest/pom.xml
@@ -57,6 +57,12 @@
          </exclusions>
       </dependency>
       
+       <!-- 코드 수정 실시간 반영 -->
+         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+         </dependency>
+      
       <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>jstl</artifactId>
